Correcting alignment of my photo

--- a/CSS/myweb.css
+++ b/CSS/myweb.css
@@ -38,3 +38,10 @@ h3.title-section{
   color:#94938D; 
   text-indent: 30px;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
